--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,8 @@
 ---
 layout: default
 ---
-<article class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header>
-
-  <div class="post-content">
-    {{ content }}
-  </div>
-
-</article>
+<div id="content" class="bg-light">
+  <span id="page-name" class="font50px text-dark bg-medium shadow-dark dejavu_sansextralight">{{ page.title | escape }}</span>
+  <span id="link-panel" style="margin-left: 545px" class="font50px text-dark bg-medium shadow-dark-left dejavu_sansextralight">{% include sociallinks.html %}</span>
+  {{ content }}
+</div>
