Modify html link references

--- a/_layouts/gamespage.html
+++ b/_layouts/gamespage.html
@@ -7,7 +7,7 @@ layout: default
 
 <div id="content" class="bg-light">
   <span id="page-name" class="font50px text-dark bg-medium shadow-dark dejavu_sansextralight">{{ page.title | escape }}</span>
-  <span id="link-panel" style="margin-left: 545px" class="font50px text-dark bg-medium shadow-dark-left dejavu_sansextralight">{% include sociallinks.html %}</span>
+  <span id="link-panel" style="margin-left: 545px" class="font50px text-dark bg-medium shadow-dark-left dejavu_sansextralight">{% include social.html %}</span>
   {{ content }}
 </div>
 
