--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         <div id="splashlinks" class="font50px">
           {% include social.html %}
         </div>
-      {% else %}
+      <!-- {% else %} -->
         <!-- <div id="logo_alternate"><a href="{{ "/" | relative_url }}"><img src="/assets/images/logo_alternate.png"></a></div> -->
       {% endif %}
         
