--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,7 +8,7 @@ layout: page
 <div id ="bio-container" class="content text-dark contains-links">
     <div id="bio-img" class="width40">
         <img id="personal_img" class="shadow-dark item" src="../assets/images/profileimg.jpeg"></img>
-        <img id="socials_img" class="shadow-dark item" src="../assets/images/socialsimg.png"></img>
+        <!-- <img id="socials_img" class="shadow-dark item" src="../assets/images/socialsimg.png"></img> -->
     </div>
     <div id="bio-text">
         <div id="bio-links" class="separator-left">
