Modify css hrefs

--- a/_includes/navlinks.html
+++ b/_includes/navlinks.html
@@ -1,8 +1,8 @@
 <div id="navigation">
     <nav>
         <ul id="navlinks">
-            <li><a href="{{ "/about/" | relative_url }}">about</a></li>
-            <li><a href="{{ "/games/" | relative_url }}">games</a></li>
+            <li><a href="{{ "about/" | relative_url }}">about</a></li>
+            <li><a href="{{ "games/" | relative_url }}">games</a></li>
         </ul>
     </nav>
 </div>
