--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 <head>
-    <link rel="stylesheet" href="{{ "/assets/about.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "assets/about.css" | relative_url }}">
 </head>
 
 <div id ="bio-container" class="content text-dark contains-links">
