--- a/_layouts/gameinfo.html
+++ b/_layouts/gameinfo.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 <head>
-  <link rel="stylesheet" href="{{ "/assets/gameinfo.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "assets/gameinfo.css" | relative_url }}">
 </head>
 
 <div id="content" class="bg-light">
   <span id="navarrow" style="opacity: 0%; margin-left: -16px;"><i class="fa fa-angle-left"></i></span>
-  <span id="page-name" class="font50px text-dark bg-medium shadow-dark dejavu_sansextralight"><a href="{{ "/games/" | relative_url }}">{{ page.title | escape }}</a></span>
+  <span id="page-name" class="font50px text-dark bg-medium shadow-dark dejavu_sansextralight"><a href="{{ "games/" | relative_url }}">{{ page.title | escape }}</a></span>
   <span id="link-panel" style="margin-left: 545px" class="font50px text-dark bg-medium shadow-dark-left dejavu_sansextralight">{% include social.html %}</span>
 
   <div id="game-info" class="text-dark {{ page.infoclass }}">
