--- a/_layouts/games.html
+++ b/_layouts/games.html
@@ -2,7 +2,7 @@
 layout: gamespage
 ---
 <head>
-    <link rel="stylesheet" href="{{ "/assets/games.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "assets/games.css" | relative_url }}">
 </head>
 
 <div id="item-list" class="dejavu_sansextralight">
