--- a/_layouts/gamespage.html
+++ b/_layouts/gamespage.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <head>
-  <link rel="stylesheet" href="{{ "/assets/games.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "assets/games.css" | relative_url }}">
 </head>
 
 <div id="content" class="bg-light">
