Modify css style paths

--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 <head>
-    <link rel="stylesheet" href="{{ "assets/splash.css" | relative_url }}"> 
+    <link rel="stylesheet" href="{{ "/assets/splash.css" | relative_url }}"> 
 </head>
