--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="{{ "/assets/reset.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/style.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/fontawesome/css/fontawesome.min.css" | relative_url }}">
+  <link rel="stylesheet" href="/assets/fontawesome/css/brands.css">
+  <link rel="stylesheet" href="/assets/fontawesome/css/solid.css">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   
