Fix link icon styles

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,3 +1,3 @@
-<a href="mailto:muniainjuan@icloud.com" title="muniainjuan@icloud.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-<a href="http://www.github.com/munij-dev" title="github.com/munij-dev"> <i class="fa fa-github" aria-hidden="true"></i> </a>
-<!-- <a href="http://www.twitter.com/munij_dev" title ="@munij_dev"><i class="fa fa-twitter" aria-hidden="true"></i></a> -->
+<a href="mailto:muniainjuan@icloud.com" title="muniainjuan@icloud.com"><i class="fa-solid fa-envelope" aria-hidden="true"></i></a>
+<a href="http://www.github.com/munij-dev" title="github.com/munij-dev"> <i class="fa-brands fa-github" aria-hidden="true"></i> </a>
+<!-- <a href="http://www.twitter.com/munij_dev" title ="@munij_dev"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a> -->
