Fix firefox style loading issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 {% include head.html %}
 
 <body class="bg-dark">
+  <script>0</script>
 	<div id="container">
 		<div id="shutter" class="text-light bg-dark">
       {% if page.layout == 'splash' %}
