--- a/assets/about.css
+++ b/assets/about.css
@@ -1,13 +1,13 @@
 hr {
 	margin: 15px 0px -15px ;
 	width: 60%;
-	border: 1px solid #94c8ff;
+	border: 1px solid #D6E8DB;
 }
 td a {
 	margin-left: 5px;
 }
 #content {
-	height: 700px;
+	height: 930px;
 }
 #bio-img {
 	float: left;
@@ -18,13 +18,13 @@ td a {
 	margin-bottom: 30px	
 }
 #bio-text {
-	float:right;
+	float: right;
 	width: 60%;
-	line-height: 180%;   
+	line-height: 170%;   
 	text-align: justify;
 }
 #bio-links {
-	font-weight: normal;
+	font-weight: bold;
 	font-size: 18px;
 }
 #bio-links table {
