--- a/assets/games.css
+++ b/assets/games.css
@@ -8,17 +8,17 @@
 	margin: 5%;
 }
 #item-list a {
-	o-transition:.3s;
-	ms-transition:.3s;
-	moz-transition:.3s;
-	webkit-transition:.3s;
+	-o-transition:.3s;
+	-ms-transition:.3s;
+	-moz-transition:.3s;
+	-webkit-transition:.3s;
 	transition:.3s;
 }
 #item-list a:hover .item-name {
-	background-color: #94c8ff;
+	background-color: #D6E8DB;
 }
 #item-list a:hover {
-	background-color: #94c8ff;
+	background-color: #D6E8DB;
 }
 #item-list a:hover img {
 	transition: .28s;
