--- a/assets/splash.css
+++ b/assets/splash.css
@@ -17,14 +17,14 @@
 	right: 0;
 }
 #splashlinks a {
-	o-transition:.3s;
-	ms-transition:.3s;
-	moz-transition:.3s;
-	webkit-transition:.3s;
+	-o-transition:.3s;
+	-ms-transition:.3s;
+	-moz-transition:.3s;
+	-webkit-transition:.3s;
 	transition:.3s;
 }
 #splashlinks a:hover {
-	color: #94c8ff;
+	color: #D6E8DB;
 }
 #navlinks {
 	top: 350px;
