--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,6 @@
     font-weight: normal;
     font-style: normal;
 }
-
 .symbol, a.symbol:before {
     font-family: 'dejavu_sansextralight', sans-serif;
     -webkit-text-rendering: optimizeLegibility;
@@ -17,19 +16,17 @@
     -moz-font-smoothing: antialiased;
     -ms-font-smoothing: antialiased;
     -o-font-smoothing: antialiased;
-    font-smoothing: antialiased;
+    -font-smoothing: antialiased;
 }
-
 a.symbol:before {
     content: attr(title);
     margin-right: 0.3em;
     font-size: 130%;
 }
-
 body {
 	font-family: 'dejavu_sansextralight', sans-serif;
-	font-weight: bold;
-	font-size: 14px;
+	font-weight: normal;
+	font-size: 16px;
 }
 a {
 	text-decoration: none;
@@ -43,46 +40,46 @@ nav ul li {
 	font-weight: 200;
 }
 nav a {
-	o-transition:.3s;
-	ms-transition:.3s;
-	moz-transition:.3s;
-	webkit-transition:.3s;
+	-o-transition:.3s;
+	-ms-transition:.3s;
+	-moz-transition:.3s;
+	-webkit-transition:.3s;
 	transition:.3s;
-	border-bottom: 0px solid #336ba7;
+	border-bottom: 0px solid #99A98F;
 }
 nav a:hover {
-	border-bottom: 5px solid #94c8ff;
-	color: #94c8ff;
+	border-bottom: 5px solid #D6E8DB;
+	color: #D6E8DB;
 }
-nav a .underline {
+/* nav a .underline {
 
-}
+} */
 .dejavu_sansextralight {
-	font-family: dejavu_sansextralight, dejavu_sansextralight-webfont;
+	font-family: 'dejavu_sansextralight', 'dejavu_sansextralight-webfont';
 }
 .active {
-	border-bottom: 5px solid #94c8ff;
+	border-bottom: 5px solid #D6E8DB;
 }
 .text-light {
-	color: #f8dfb1;
+	color: #FFF8DE;
 }
 .text-dark {
-	color: #336ba7;
+	color: #99A98F;
 }
 .text-medium {
-	color: #94c8ff;
+	color: #D6E8DB;
 }
 .bg-dark {
-	background-color: #336ba7;
+	background-color: #99A98F;
 }
 .bg-black {
 	background-color: black;
 }
 .bg-light {
-	background-color: #f8dfb1;
+	background-color: #FFF8DE;
 }
 .bg-medium {
-	background-color: #94c8ff;
+	background-color: #D6E8DB;
 }
 .rounded {
 	border-radius: 10px;
@@ -91,22 +88,22 @@ nav a .underline {
 	font-size: 40px;
 }
 .shadow-dark {
-	box-shadow: 5px 6px #336ba7;
+	box-shadow: 5px 6px #99A98F;
 }
 .shadow-dark-left {
-	box-shadow: -5px 6px #336ba7;
+	box-shadow: -5px 6px #99A98F;
 }
 .shadow-light {
-	box-shadow: 5px 5px #f8dfb1;
+	box-shadow: 5px 5px #FFF8DE;
 }
 .separator-left {
-	border-left: 2px solid #94c8ff;
+	border-left: 2px solid #D6E8DB;
 }
 .contains-links a {
 	text-decoration: underline;
 }
 .contains-links a:hover {
-	color: #94c8ff;
+	color: #D6E8DB;
 }
 .img-wrapper {
 	overflow: hidden;
@@ -174,7 +171,7 @@ nav a .underline {
     font-size: 50px;
 }
 #externallinks a:hover {
-    border:none;
+    border: none;
 }
 #content {
     position: relative;
@@ -195,14 +192,14 @@ nav a .underline {
     padding: 6px 10px;
 }
 #link-panel a {
-    o-transition:.3s;
-    ms-transition:.3s;
-    moz-transition:.3s;
-    webkit-transition:.3s;
+    -o-transition:.3s;
+    -ms-transition:.3s;
+    -moz-transition:.3s;
+    -webkit-transition:.3s;
     transition:.3s;
 }
 #link-panel a:hover {
-    color: #f8dfb1;
+    color: #FFF8DE;
 }
 #footer {
 	position: relative;
