Add socials, modify about page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,7 +8,7 @@ layout: page
 <div id ="bio-container" class="content text-dark contains-links">
     <div id="bio-img" class="width40">
         <img id="personal_img" class="shadow-dark item" src="../assets/images/profileimg.jpeg"></img>
-        <!-- <img id="socials_img" class="shadow-dark item" src="../assets/images/socialsimg.png"></img> -->
+        <img id="socials_img" class="shadow-dark item" src="../assets/images/socialsimg.png"></img>
     </div>
     <div id="bio-text">
         <div id="bio-links" class="separator-left">
@@ -18,8 +18,13 @@ layout: page
                 </tr>
                 <tr>
                     <td>Github:</td><td><a href="http://www.github.com/munij-dev">github.com/munij-dev</a></td>
-                <!-- </tr>
-                    <td>Twitter:</td><td><a href="http://www.twitter.com/munij_dev">@munij_dev</a></td> -->
+                </tr>
+                <tr>
+                     <td>Linkedin</td><td><a href="http://www.linkedin.com/in/juan-muniain">in/juan-muniain</a></td>
+                </tr>
+                <tr>
+                    <td>Twitter:</td><td><a href="http://www.twitter.com/munij_dev">@munij_dev</a></td>
+                </tr>
             </table>
         </div>
         {{ content }}
