--- a/_includes/navlinks.html
+++ b/_includes/navlinks.html
@@ -3,6 +3,7 @@
         <ul id="navlinks">
             <li><a href="{{ "/about/" | relative_url }}">about</a></li>
             <li><a href="{{ "/games/" | relative_url }}">games</a></li>
+            <li><a href="{{ "/reels/" | relative_url }}">reels</a></li>
         </ul>
     </nav>
 </div>
