--- a/assets/style.css
+++ b/assets/style.css
@@ -29,6 +29,13 @@ body {
 	font-weight: normal;
 	font-size: 16px;
 }
+@media only screen and (min-width: 481px) {
+    body {
+      padding-top: 24px;
+      padding-right: 24px;
+      padding-left: 24px;
+    }
+  }
 a {
 	text-decoration: none;
 	color: inherit;
