--- a/_layouts/reelspage.html
+++ b/_layouts/reelspage.html
@@ -6,7 +6,7 @@ layout: default
 </head>
 
 <div id="content" class="bg-light">
-  <span id="page-name" class="font40px text-dark bg-medium shadow-dark dejavu_sansextralight">{{ recent | escape }}</span>
+  <span id="page-name" class="font40px text-dark bg-medium shadow-dark dejavu_sansextralight">{{ "recent" | escape }}</span>
   <span id="link-panel" style="margin-left: 545px" class="font40px text-dark bg-medium shadow-dark-left dejavu_sansextralight">{% include social.html %}</span>
   {{ content }}
 </div>
