--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -20,7 +20,7 @@ layout: page
                     <td>Github:</td><td><a href="http://www.github.com/munij-dev">github.com/munij-dev</a></td>
                 </tr>
                 <tr>
-                     <td>Linkedin</td><td><a href="http://www.linkedin.com/in/juan-muniain">in/juan-muniain</a></td>
+                     <td>Linkedin:</td><td><a href="http://www.linkedin.com/in/juan-muniain">in/juan-muniain</a></td>
                 </tr>
                 <tr>
                     <td>Twitter:</td><td><a href="http://www.twitter.com/munij_dev">@munij_dev</a></td>
