Modify navlink titles

--- a/_includes/navlinks.html
+++ b/_includes/navlinks.html
@@ -2,8 +2,8 @@
     <nav>
         <ul id="navlinks">
             <li><a href="{{ "/about/" | relative_url }}">about</a></li>
-            <li><a href="{{ "/games/" | relative_url }}">games</a></li>
-            <li><a href="{{ "/reels/" | relative_url }}">reels</a></li>
+            <li><a href="{{ "/games/" | relative_url }}">games (wip)</a></li>
+            <li><a href="{{ "/reels/" | relative_url }}">reels (wip)</a></li>
         </ul>
     </nav>
 </div>
