--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,4 +1,4 @@
 <a href="mailto:muniainjuan@icloud.com" title="muniainjuan@icloud.com"><i class="fa-solid fa-envelope" aria-hidden="true"></i></a>
 <a href="http://www.linkedin.com/in/juan-muniain" title="in/juan-muniain"> <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i> </a>
-<a href="http://www.github.com/munij-dev" title="github.com/munij-dev"> <i class="fa-brands fa-github" aria-hidden="true"></i> </a>
-<a href="http://www.twitter.com/munij_dev" title ="@munij_dev"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
+<a href="http://www.github.com/munjidev" title="github.com/munjidev"> <i class="fa-brands fa-github" aria-hidden="true"></i> </a>
+<a href="http://www.twitter.com/munjidev" title ="@munjidev"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
