--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -17,13 +17,13 @@ layout: page
                     <td>Email:</td><td><a href="mailto:muniainjuan@icloud.com">muniainjuan@icloud.com</a></td>
                 </tr>
                 <tr>
-                    <td>GitHub:</td><td><a href="http://www.github.com/munij-dev">github.com/munij-dev</a></td>
+                    <td>GitHub:</td><td><a href="http://www.github.com/munjidev">github.com/munjidev</a></td>
                 </tr>
                 <tr>
                      <td>LinkedIn:</td><td><a href="http://www.linkedin.com/in/juan-muniain">in/juan-muniain</a></td>
                 </tr>
                 <tr>
-                    <td>Twitter:</td><td><a href="http://www.twitter.com/munij_dev">@munij_dev</a></td>
+                    <td>Twitter:</td><td><a href="http://www.twitter.com/munjidev">@munjidev</a></td>
                 </tr>
             </table>
         </div>
