--- a/assets/style.css
+++ b/assets/style.css
@@ -153,7 +153,7 @@ nav a:hover {
     top: 10px;
     height:100px;
 }
-#munijtext {
+#munjitext {
     position: absolute;
     top: 68px;
     left: 0;
