Improve responsiveness; Modify styles and page layouts

--- a/_includes/gameslist.html
+++ b/_includes/gameslist.html
@@ -1,27 +1,39 @@
-<div id="item-list" class="dejavu_sansextralight">
-    {%- for post in site.categories.jams -%} 
+<head>
+    <link rel="stylesheet" href="{{ "/assets/items.css" | relative_url }}">
+</head>
+
+<div id="item-list" class="pixelade">
+
+    {%- for post in include.loc -%} 
         {% assign odd = forloop.index | modulo: 2%}
+        <div>
 
-            {% if odd == 1%}
-                <div id="column-left"> 
-            {% else %}
-                <div id="column-right"> 
-            {% endif %}
+            <div class="item">
+                <a href="{{ post.url | relative_url }}">
+                    <div class="img-wrapper">
+                        <img class="item-pic" src="{{ post.preview | relative_url }}"></img>
+                    </div>
 
-            <div class="item"><a href="{{ post.url | relative_url }}">
-            <div class="img-wrapper">
-                <img class="item-pic" src="{{ post.preview | relative_url }}"></img>
+                    {% if odd == 1 %}
+                        <div class="item-name text-dark shadow-dark">
+                    {% else %}
+                        <div class="item-name text-dark shadow-dark-left">
+                    {% endif %}
+
+                        <span class="item-title {{ post.titleclass }}">{{ post.title }}</span>
+                    </div>
+
+                </a>
+
+                {% if odd == 1%}
+                <div class="popout-right item-popout"> 
+                {% else %}
+                <div class="popout-left item-popout">
+                {% endif %}
+                    {%- include gamepopup.html odd=odd page=post -%}
+                </div>
+
             </div>
-
-            {% if odd == 1 %}
-                <div class="item-name text-dark shadow-dark">
-            {% else %}
-                <div class="item-name text-dark shadow-dark-left">
-            {% endif %}
-
-                <span class="item-title {{ post.titleclass }}">{{ post.title }}</span>
-            </div>
-            </a></div>
         </div>
     {%- endfor -%}
 </div>
