--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,15 +8,12 @@
 	<div id="container">
 		<div id="shutter" class="text-light bg-dark">
       {% if page.layout == 'splash' %}
-        <!-- <div id="logo"><img src="/assets/images/logo.png"></div> -->
         <div id="splashlinks" class="font40px">
-          {% include social.html %}
+          {% include links/social.html %}
         </div>
-      {% else %}
-        <!-- <div id="logo_alternate"><a href="{{ "/" | relative_url }}"><img src="/assets/images/logo_alternate.png"></a></div> -->
       {% endif %}
         
-      {% include navlinks.html %}
+      {% include links/nav.html %}
 		</div>
     {{ content }}
 	</div>
