--- a/_layouts/reels.html
+++ b/_layouts/reels.html
@@ -1,34 +1,17 @@
 ---
-layout: reelspage
+layout: default
 ---
 <head>
-    <link rel="stylesheet" href="{{ "/assets/reels.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/reels.css" | relative_url }}">
 </head>
 
-<div id="item-list" class="dejavu_sansextralight">
+<div id="content" class="bg-light">
+  <span id="page-name" class="font40px text-dark bg-medium shadow-dark dejavu_sansextralight">{{ page.title | escape }}</span>
+  <span id="link-panel" style="margin-left: 545px" class="font40px text-dark bg-medium shadow-dark-left dejavu_sansextralight">{% include links/social.html %}</span>
+  {{ content }}
+</div>
 
-    {%- for post in site.categories.recent -%} 
-        {% assign odd = forloop.index | modulo: 2%}
-
-        {% if odd == 1%}
-        <div id="column-left"> 
-        {% else %}
-        <div id="column-right"> 
-        {% endif %}
-
-            <div class="item"><a href="{{ post.url | relative_url }}">
-                <div class="img-wrapper">
-                    <img class="item-pic" src="{{ post.preview | relative_url }}"></img>
-                </div>
-
-                {% if odd == 1 %}
-                    <div class="item-name text-dark shadow-dark">
-                {% else %}
-                    <div class="item-name text-dark shadow-dark-left">
-                {% endif %}
-
-                    <span class="item-title {{ post.titleclass }}">{{ post.title }}</span>
-                </div>
-            </a></div>
-        </div>
-    {%- endfor -%}
+<div id="content" class="bg-light">
+  <span id="page-name" class="font40px text-dark bg-medium shadow-dark dejavu_sansextralight">{{ "old" | escape }}</span>
+  {%- include  reelslist.html -%}
+</div>
