Fix img style background

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -10,7 +10,7 @@ layout: page
         {%- include links/info.html -%}
     </div>
 
-    <div id="info-pics" class="bg-dark">
+    <div id="info-pics" class="bg-light">
         <img id="personal_img" class="shadow-dark item" src="../assets/images/profileimg.jpeg"></img>
         <img id="socials_img" class="shadow-dark item" src="../assets/images/socialsimg.jpeg"></img>
     </div>
