--- a/_layouts/reelinfo.html
+++ b/_layouts/reelinfo.html
@@ -14,8 +14,8 @@ layout: default
   </span>
   <span id="link-panel" style="margin-left: 545px" class="font40px text-dark bg-medium shadow-dark-left dejavu_sansextralight">{% include links/social.html %}</span>
 
-  <div id="reel-info" class="text-dark {{ page.infoclass }}">
-    <div id="reel-pic-wrapper">
+  <div id="item-info" class="text-dark {{ page.infoclass }}">
+    <div id="item-pic-wrapper">
       {{ content }}
     </div>
     <table class="separator-left">
@@ -38,7 +38,7 @@ layout: default
     
   </div>
 
-  <div id="reel-desc">
+  <div id="item-desc">
     {{ page.desc }}
   </div>
 </div>
