--- a/_layouts/reels.html
+++ b/_layouts/reels.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <head>
-  <link rel="stylesheet" href="{{ "/assets/reels.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/items.css" | relative_url }}">
 </head>
 
 <div id="content" class="bg-light">
