--- a/_layouts/gameinfo.html
+++ b/_layouts/gameinfo.html
@@ -11,8 +11,8 @@ layout: default
       {{ page.title | escape }}
     </a>
   </span>
-  <span id="navarrow" style="opacity: 0%; margin-left: -16px;"><i class="fa fa-angle-left"></i></span>
-  <span id="link-panel" style="margin-left: 545px" class="font40px text-dark bg-medium shadow-dark-left dejavu_sansextralight">{% include links/social.html %}</span>
+  <span id="navarrow"><i class="fa fa-angle-left"></i></span>
+  <span id="link-panel" class="font40px text-dark bg-medium shadow-dark-left dejavu_sansextralight">{% include links/social.html %}</span>
 
   <div id="item-info" class="text-dark {{ page.infoclass }}">
     <div id="item-pic-wrapper">
