--- a/_includes/reelslist.html
+++ b/_includes/reelslist.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="{{ "/assets/items.css" | relative_url }}">
 </head>
 
-<div id="item-list" class="pixelade">
+<div id="item-list" class="dejavu_sansextralight">
 
     {%- for post in include.loc -%} 
         {% assign odd = forloop.index | modulo: 2%}
