--- a/_includes/links/info.html
+++ b/_includes/links/info.html
@@ -1,4 +1,4 @@
-<div id="links" class="separator-left">
+<div id="info-links" class="separator-left">
     <table>
         <tr>
             <td>Email:</td><td><a href="mailto:{{ site.email }}">{{ site.email }}</a></td>
