Fix bluesky links

--- a/_includes/links/social.html
+++ b/_includes/links/social.html
@@ -1,4 +1,4 @@
 <a href="mailto:{{ site.email }}" title="{{ site.email }}"><i class="fa-solid fa-envelope" aria-hidden="true"></i></a>
 <a href="http://www.github.com/{{ site.github_sername }}" title="github.com/{{ site.github_sername }}"> <i class="fa-brands fa-github" aria-hidden="true"></i> </a>
 <a href="http://www.twitter.com/{{ site.twitter_username }}" title ="@{{ site.twitter_username }}"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
-<a href="http://bsky.app/{{ site.bluesky_username }}.bsky.social" title ="@{{ site.bluesky_username }}"><i class="fa-brands fa-bluesky" aria-hidden="true"></i></a>
+<a href="http://bsky.app/profile/{{ site.bluesky_username }}.bsky.social" title ="@{{ site.bluesky_username }}"><i class="fa-brands fa-bluesky" aria-hidden="true"></i></a>
