--- a/_includes/icon-bluesky.html
+++ b/_includes/icon-bluesky.html
@@ -1,1 +1,1 @@
-<a href="http://bsky.app/{{ site.bluesky_username }}.bsky.social"><span class="icon icon--bluesky">{% include icon-bluesky.svg %}</span><span class="username">{{ include.username }}</span></a>
+<a href="http://bsky.app/profile/{{ site.bluesky_username }}.bsky.social"><span class="icon icon--bluesky">{% include icon-bluesky.svg %}</span><span class="username">{{ include.username }}</span></a>
