--- a/_includes/links/info.html
+++ b/_includes/links/info.html
@@ -10,7 +10,7 @@
             <td>Twitter:</td><td><a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a></td>
         </tr>
         <tr>
-            <td>Bluesky:</td><td><a href="http://bsky.app/{{ site.bluesky_username }}.bsky.social">@{{ site.bluesky_username }}</a></td>
+            <td>Bluesky:</td><td><a href="http://bsky.app/profile/{{ site.bluesky_username }}.bsky.social">@{{ site.bluesky_username }}</a></td>
         </tr>
     </table>
 </div>
