Remove nav from about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
         </div>
       {% endif %}
         
-      {% include links/nav.html %}
+      <!--{% include links/nav.html %}-->
 		</div>
     {{ content }}
 	</div>
