Tweak nav links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,8 @@
         <div id="splashlinks" class="font40px">
           {% include links/social.html %}
         </div>
+        {% include links/nav.html %}
       {% endif %}
-        
-      <!--{% include links/nav.html %}-->
 		</div>
     {{ content }}
 	</div>
