Tweak nav links

--- a/_includes/links/nav.html
+++ b/_includes/links/nav.html
@@ -1,7 +1,7 @@
 <div id="navigation">
     <nav>
         <ul id="navlinks">
-            <li><a href="{{ "/about/" | relative_url }}">about</a></li>
+            <li><a href="{{ "/about/" | relative_url }}">about me</a></li>
             <!-- <li><a href="{{ "/games/" | relative_url }}">games (wip)</a></li> -->
             <!-- <li><a href="{{ "/reels/" | relative_url }}">reels (wip)</a></li> -->
         </ul>
