Tweak about page nav

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <div id="content" class="bg-light">
-  <!-- <span id="page-name" class="font50px text-dark bg-medium shadow-dark dejavu_sansextralight">{{ page.title | escape }}</span> -->
-   <br>
+  <span id="page-name" class="font50px text-dark bg-medium shadow-dark dejavu_sansextralight">{{ page.title | escape }}</span>
+   <!-- <br> -->
   <span id="link-panel" class="font50px text-dark bg-medium shadow-dark-left dejavu_sansextralight">{% include links/social.html %}</span>
   {{ content }}
 </div>
