--- a/_includes/links/info.html
+++ b/_includes/links/info.html
@@ -4,7 +4,7 @@
             <td>Email:</td><td><a href="mailto:{{ site.email }}">{{ site.email }}</a></td>
         </tr>
         <tr>
-            <td>GitHub:</td><td><a href="http://www.github.com/{{ site.github_username }}">github.com/{{ site.github_username }}</a></td>
+            <!-- <td>GitHub:</td><td><a href="http://www.github.com/{{ site.github_username }}">github.com/{{ site.github_username }}</a></td> -->
         </tr>
         <tr>
             <td>Twitter:</td><td><a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a></td>
