--- a/_includes/links/info.html
+++ b/_includes/links/info.html
@@ -7,10 +7,10 @@
             <!-- <td>GitHub:</td><td><a href="http://www.github.com/{{ site.github_username }}">github.com/{{ site.github_username }}</a></td> -->
         </tr>
         <tr>
-            <td>Linkedin</td><td><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}">{{ site.linekdin_username }}</a></td>
+            <td>Linkedin:</td><td><a href="http://www.linkedin.com/in/{{ site.linkedin_username }}">{{ site.linkedin_username }}</a></td>
         </tr>
         <tr>
-            <td>Twitter/Bluesky</td><td><a href="http://bsky.app/profile/{{ site.bluesky_username }}.bsky.social">@{{ site.bluesky_username }}</a></td>
+            <td>Twitter/Bluesky:</td><td><a href="http://bsky.app/profile/{{ site.bluesky_username }}.bsky.social">@{{ site.bluesky_username }}</a></td>
         </tr>
     </table>
 </div>
